// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`NavBarDesktopRight Snapshots should match snapshot when logged in 1`] = `
<div
  class="flex items-center pr-2"
>
  <div
    class="ml-5 hidden md:block"
  >
    <div>
      <button
        aria-expanded="false"
        aria-haspopup="true"
        class="relative flex rounded-full bg-gray-200 text-sm cursor-pointer"
        id="user-menu-button"
        type="button"
      >
        <span
          class="absolute inset-1.5"
        />
        <span
          class="sr-only"
        >
          Open user menu
        </span>
        <img
          alt=""
          class="h-8 w-8 rounded-full"
          data-testid="profile-image"
          height="40"
          src="https://example.com/profile.jpg"
          width="40"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`NavBarDesktopRight Snapshots should match snapshot when logged out 1`] = `null`;

exports[`NavBarDesktopRight Snapshots should match snapshot with dropdown menu open 1`] = `
<div
  class="flex items-center pr-2"
>
  <div
    class="ml-5 hidden md:block"
  >
    <div>
      <button
        aria-expanded="false"
        aria-haspopup="true"
        class="relative flex rounded-full bg-gray-200 text-sm cursor-pointer"
        id="user-menu-button"
        type="button"
      >
        <span
          class="absolute inset-1.5"
        />
        <span
          class="sr-only"
        >
          Open user menu
        </span>
        <img
          alt=""
          class="h-8 w-8 rounded-full"
          data-testid="profile-image"
          height="40"
          src="https://example.com/profile.jpg"
          width="40"
        />
      </button>
    </div>
    <div
      aria-labelledby="user-menu-button"
      aria-orientation="vertical"
      class="absolute right-0 top-10 z-40 p-2 w-50 origin-top-right rounded-sm bg-white border-gray-100 shadow-md flex flex-col items-center justify-center space-y-2"
      id="user-menu"
      role="menu"
      tabindex="-1"
    >
      <a
        class="menu-btn-not-current-path menu-btn"
        href="/profile"
        id="user-menu-item-0"
        role="menuitem"
        tabindex="-1"
      >
        My Listings
      </a>
      <a
        class="menu-btn-not-current-path menu-btn"
        href="/properties/favorites"
        id="user-menu-item-1"
        role="menuitem"
        tabindex="-1"
      >
        Favorite Properties
      </a>
      <button
        data-testid="logout-button"
        id="user-menu-item-2"
      >
        Logout
      </button>
    </div>
  </div>
</div>
`;
